--- a/server/package.json
+++ b/server/package.json
@@ -1,18 +1,22 @@
 {
   "name": "pvtracker-server",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "node.js server for pvtracker webapp",
   "author": "Juho Juurinen",
   "scripts": {
-    "start": "node src/index.js",
+    "build": "tsc -p .",
+    "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon src/index.js"
+    "watch": "ts-node-dev --respawn --transpileOnly src/index.ts"
   },
   "dependencies": {
     "express": "^4.16.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.12.18",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "typescript": "^3.2.2"
   },
   "private": true,
   "license": "MIT"
