--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pvtracker-server",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "node.js server for pvtracker webapp",
   "author": "Juho Juurinen",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "npm run lint && tsc -p .",
+    "lint": "tslint -c tslint.json -p tsconfig.json",
     "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "ts-node-dev --respawn --transpileOnly src/index.ts"
@@ -16,6 +17,7 @@
     "@types/express": "^4.16.0",
     "@types/node": "^10.12.18",
     "ts-node-dev": "^1.0.0-pre.32",
+    "tslint": "^5.12.1",
     "typescript": "^3.2.2"
   },
   "private": true,
