--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,11 @@
 {
   "name": "pvtracker-client",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "react.js client for pvtracker webapp",
   "author": "Juho Juurinen",
   "scripts": {
-    "build": "webpack --mode=production",
+    "build": "npm run lint && webpack --mode=production",
+    "lint": "tslint -c tslint.json -p tsconfig.json",
     "start": "webpack-dev-server --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +17,8 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.2.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
