--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "pvtracker-server",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "node.js server for pvtracker webapp",
   "author": "Juho Juurinen",
   "scripts": {
     "build": "npm run lint && tsc -p .",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
+    "lint": "tslint -c tslint.json ./src/** ./test/**",
     "start": "npm run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx jest --verbose --runInBand",
     "watch": "ts-node-dev --respawn --transpileOnly src/index.ts"
   },
   "dependencies": {
@@ -15,7 +15,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.13",
     "@types/node": "^10.12.18",
+    "@types/supertest": "^2.0.7",
+    "jest": "^23.6.0",
+    "supertest": "^3.4.1",
+    "ts-jest": "^23.10.5",
     "ts-node-dev": "^1.0.0-pre.32",
     "tslint": "^5.12.1",
     "typescript": "^3.2.2"
