--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build": "npm run lint && webpack --mode=production",
     "lint": "tslint -c tslint.json ./src/** ./test/**",
     "start": "webpack-dev-server --mode=development",
-    "test": "npx jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose"
   },
   "dependencies": {
     "react": "^16.7.0",
@@ -19,6 +19,7 @@
     "@types/jest": "^23.3.13",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
