--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,25 @@
 sudo: required
 language: node_js
+cache: npm
+
 node_js:
   - "10"
+services:
+  - docker
 
+before_install:
+  - echo "$HEROKU_API_KEY" | docker login -u _ --password-stdin registry.heroku.com
 install:
   - cd client && npm install
   - cd ../server && npm install
 script:
   - cd ../client && npm test
   - cd ../server && npm test
-
-cache: npm
+deploy:
+  provider: script
+  script:
+    cd .. && docker build -t registry.heroku.com/$HEROKU_APP_NAME/web .;
+    docker push registry.heroku.com/$HEROKU_APP_NAME/web;
+    heroku container:release web --app $HEROKU_APP_NAME;
+  on:
+    branch: master
