--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ install:
   - cd client && npm install
   - cd ../server && npm install
 script:
-  - cd ../client && npm test
-  - cd ../server && npm test
+  - cd ../client && npm run lint && npm test
+  - cd ../server && npm run lint && npm test
 deploy:
   provider: script
   script:
