--- a/server/package.json
+++ b/server/package.json
@@ -11,25 +11,25 @@
     "watch": "ts-node-dev --respawn --transpileOnly src/index.ts"
   },
   "dependencies": {
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "mongoose": "^5.4.7"
-  },
-  "devDependencies": {
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.13",
     "@types/mongoose": "^5.3.10",
     "@types/node": "^10.12.18",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.7",
+    "tslint": "^5.12.1",
+    "typescript": "^3.2.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^23.3.13",
     "@types/supertest": "^2.0.7",
     "cross-env": "^5.2.0",
     "jest": "^23.6.0",
     "mongodb-memory-server": "^3.0.0",
     "supertest": "^3.4.1",
     "ts-jest": "^23.10.5",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "tslint": "^5.12.1",
-    "typescript": "^3.2.2"
+    "ts-node-dev": "^1.0.0-pre.32"
   },
   "private": true,
   "license": "MIT"
