--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pvtracker-server",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "node.js server for pvtracker webapp",
   "author": "Juho Juurinen",
   "scripts": {
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.13",
     "@types/supertest": "^2.0.7",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "jest": "^23.6.0",
     "mongodb-memory-server": "^3.0.0",
