--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,13 @@ install:
 script:
   - cd ../client && npm run lint && npm test -- --coverage
   - cd ../server && npm run lint && npm test -- --coverage
+after_success:
   - cat ../client/coverage/lcov.info >> ./coverage/lcov.info
   - cd .. && cat ./server/coverage/lcov.info | ./server/node_modules/coveralls/bin/coveralls.js
 deploy:
   provider: script
   script:
-    cd .. && docker build -t registry.heroku.com/$HEROKU_APP_NAME/web .;
+    docker build -t registry.heroku.com/$HEROKU_APP_NAME/web .;
     docker push registry.heroku.com/$HEROKU_APP_NAME/web;
     heroku container:release web --app $HEROKU_APP_NAME;
   on:
