--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pvtracker-client",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "react.js client for pvtracker webapp",
   "author": "Juho Juurinen",
   "scripts": {
@@ -13,8 +13,14 @@
     "@material-ui/core": "^3.9.2",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^7.0.1",
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
     "tslint-react": "^3.6.0",
