--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,13 @@
 {
   "name": "pvtracker-server",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "node.js server for pvtracker webapp",
   "author": "Juho Juurinen",
   "scripts": {
     "build": "npm run lint && tsc -p .",
     "lint": "tslint -c tslint.json ./src/** ./test/**",
     "start": "npm run build && cross-env NODE_ENV=production node dist/index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
+    "test": "cross-env NODE_ENV=test jest --verbose",
     "watch": "ts-node-dev --respawn --transpileOnly src/index.ts"
   },
   "dependencies": {
